--- a/pom.xml
+++ b/pom.xml
@@ -108,7 +108,7 @@
 	</properties>
 	<build>
 		<plugins>
-			<plugin>
+		<!-- 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>3.0.0-M5</version>
@@ -118,6 +118,8 @@
 				  </suiteXmlFiles>
 				</configuration>
 			  </plugin>
+			   -->
+			  
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
